# CellSimul

./: .gitignore  CellSimul_Colab_Training.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
cond_models/: conditional_dataloader.py  conditional_discriminator.py  conditional_generator.py  conditional_train.py  conditional_train_ada.py  conditional_train_ada_structural.py  enhanced_conditional_dataloader.py  mask_only_generator.py  test_cellsynthesis_fix.py  unpaired_conditional_dataloader.py
cyclegan_models/: cyclegan_networks.py  cyclegan_trainer.py  cyclegan_trainer_backup.py  cyclegan_trainer_corrupted.py
mask_creation/: __init__.py  synthetic_cell_membrane_masks_2d.py
models/: dataloader.py  discriminator.py  generator.py  train.py
outputs/predictions/: generation_summary_4_masks.txt
src/: mask_creation.py
tests/: apply_model.py  test_prepare_data.py  test_synthetic_cells.py
utils/: __init__.py  distance_transform_utils.py  prepare_data.py  rescale_save.py
